res/examples/valid/call_callable_fn_expr_with_assignment.eg
let result: number = (a: number, b: number): number => {
    a + b
}(1, 2);