res/examples/invalid/call_noncallable_list_using_variable.eg
let e: list<string> = [];

e();

let l = [1, 2, 3];

l();

// out: TypeError: list<string> is not callable
// out: TypeError: list<number> is not callable